:recycle: cleanup